0.12.0.AR (DD MMM YYYY):
-----------------------
- Fixes Several Memory Management Issues
  * These had largely been introduced after the v0.12.0.AN Release
  * One outcome had been a failure to run on units some units (mainly laptops)


0.12.0.AQ (03 Feb 2021):
-----------------------
- Fixes Volume Scanning Bug
  * Volumes were not scanned for boot loaders if at least one user provided driver was not present
  * This bug appeared in v0.12.0.AM
- Fixes Hidden Items Bug
  * Tags and Tools could not be hidden and those hidden could not be managed
  * This bug appeared in v0.12.0.AP


0.12.0.AP (02 Feb 2021):
-----------------------
- Misc Improvements to CSR Configuration Options
- Misc Improvements to Limit Memory Leaks
- Renames "force_trim" Config Option to "trim_force"
- Adds 'SupplyAPFS' Feature
  * This eliminates the need for manually adding APFS drivers when APFS is not supported
- Adds 'SuppressVerboseAPFS' Feature
  * This suppresses the scrolling loading text that appears when loading APFS drivers
  * Provided as a separate item as its action may impact other text output
- Adds 'AllowDuplicates' Feature
  * This allows scanning of partitions with duplicate filesystem UUIDs if required
- Fixes Default Legacy UEFI Scan Types
- Fixes Boot Loading Screen Interface on all Units
  * Allows Boot Loading Screen such as the Mac Stage 1 Loading Screen to display correctly
  * This had been unknowing fixed on MacPro5,1 units earlier and now extended to all units
  * Hence, 'OsxAptioFix' drivers are no longer required on Macs and are actively discouraged
- Fixes Device Handle Connection Bug
  * Device handles were not connected if at least one user provided driver was not present
  * This resulted in GOP not not being acquired/provided from RAM when required in such instances
  * This bug appeared in v0.12.0.AM
- Fixes Permitted Qemu Memory Leak Wokaround Bug
  * A permitted memory leak supposed to be limited to Qemu had been applied to all users