@@ -18,7 +18,7 @@ The development focus is on Classic MacPros, MacPro3,1 to MacPro5,1 (and equival
 
 
 ## Installation
-[MyBootMgr](https://www.dakanji.com/creations/index.html), an automated preconfigured implementation of a RefindPlus/OpenCore chain-loading arrangement is recommended for implementation on MacPro3,1 to MacPro5,1 as well as on Xserve3,1. However, the RefindPlus efi can work as a drop-in replacement for the rEFInd efi. Hence, you can get the [rEFInd package](https://www.rodsbooks.com/refind/getting.html) and [install this](https://www.rodsbooks.com/refind/installing.html) first. This permits implementing RefindPlus on other Mac types as well as on other operating systems supported by rEFInd. 
+[MyBootMgr](https://www.dakanji.com/creations/index.html), an automated preconfigured implementation of a RefindPlus/OpenCore chain-loading arrangement is recommended for implementation on MacPro3,1 to MacPro5,1 as well as on Xserve3,1. However, the RefindPlus efi can work as a drop-in replacement for the rEFInd efi. Hence, you can get the [rEFInd package](https://www.rodsbooks.com/refind/getting.html) and [install this](https://www.rodsbooks.com/refind/installing.html) first. This permits implementing RefindPlus on other Mac types as well as on other operating systems supported by rEFInd.
 
 Once rEFInd is installed, replace the rEFInd efi with the RefindPlus efi. (Ensure that you rename the RefindPlus efi to match the rEFInd efi name).
 
@@ -39,6 +39,7 @@ A sample RefindPlus configuration file is provided here: [config.conf-sample](ht
 - disable_amfi
 - supply_apfs
 - suppress_verbose_apfs
+- enforce_apfs
 - protect_mac_nvram
 - set_mac_boot_args
 - scale_ui
