@@ -3,6 +3,9 @@
 - Fixes Several Memory Management Issues
   * These had largely been introduced after the v0.12.0.AN Release
   * One outcome had been a failure to run on units some units (mainly laptops)
+- Adds 'EnforceAPFS' Feature
+  * Allows booting Mac OS Big Sur when SIP is disabled.
+  * Allows booting FileVault encrypted volumes directly.
 
 
 0.12.0.AQ (03 Feb 2021):
